# GRNgen

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/graphs/: ecoli_gnw_g.graphml  ecoli_gnw_motifs.json  ecoli_gnw_stat.json  ecoli_wolf_g.graphml  ecoli_wolf_motifs.json  ecoli_wolf_stat.json  hESC_g.graphml  hESC_motifs.json  hESC_stat.json  human_trrust_g.graphml  human_trrust_motifs.json  human_trrust_stat.json  mDC_g.graphml  mDC_motifs.json  mDC_stat.json  mESC_g.graphml  mESC_motifs.json  mESC_stat.json  yeast_g.graphml  yeast_motifs.json  yeast_stat.json
data/random_graphs/: best_graphs.gephi
data/random_graphs/ecoli_gnw/: ecoli_gnw_random408.graphml  random_failures.csv  random_motifs.csv  random_properties.csv  relative_error.csv
data/random_graphs/ecoli_wolf/: ecoli_wolf_random785.graphml  random_failures.csv  random_motifs.csv  random_properties.csv  relative_error.csv
data/random_graphs/hESC/: hESC_random271.graphml  hESC_results.parquet  random_failures.csv  random_motifs.csv  random_properties.csv  relative_error.csv
data/random_graphs/human_trrust/: human_trrust_ensemble.parquet  human_trrust_random34.graphml  random_failures.csv  random_motifs.csv  random_properties.csv  relative_error.csv
data/random_graphs/mDC/: mDC_random190.graphml  mDC_results.parquet  (+4 more)
grngen/: __init__.py  plot.py  process_data.py  random_graph.py
notebooks/paper/: generate_degree_distributions.ipynb  generate_figures.ipynb  generate_figures.py  generate_graphs.ipynb  plot_human_figures.ipynb
src/: plot.py  process_data.py  random_graph.py
(+172 files in other folders)
